# fastapi-react-boilerplate

./: .gitignore  .pre-commit-config.yaml
.github/workflows/: lint.yml
backend/: .env.example  .flake8  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: admin.py  crud.py  initial_data.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: ebeb4089a490_initial_migration.py
backend/app/core/: config.py  db.py  security.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: user.py
backend/tests/: conftest.py
backend/tests/app/: conftest.py  test_crud.py
backend/tests/app/core/: test_security.py
