[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.121.3",
    "passlib>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "sentry-sdk[fastapi]>=2.45.0",
    "sqladmin[full]>=0.21.0",
    "sqlalchemy>=2.0.44",
    "types-passlib>=1.7.7.20250602",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=3.9.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=0.25.2",
    "ruff>=0.14.6",
    "aiosqlite>=0.20.0",
]

[tool.mypy]
mypy_path = "."

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
